# telluric_handeval

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: hand.rs  lib.rs
tests/: full_house.rs  pair.rs  poker_flush.rs  poker_four_kind.rs  poker_full_house.rs  poker_pair.rs  poker_straight.rs  poker_straight_flush.rs  poker_three_kind.rs  poker_two_pair.rs  three_of_a_kind.rs  two_pair.rs
