[package]
name = "telluric-handeval"
version = "0.1.0"
authors = ["andy5995 <andy400-dev@yahoo.com>", "Jammyjamjamman <jdsherratt3@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ionic_deckhandler = { path = "../ionic-deckhandler" }

# ionic_deckhandler = { git = "https://github.com/TelluricDeckay/ionic-deckhandler" }
