[package]
name = "telluric_handeval"
version = "0.1.0-dev"
authors = ["Andy Alt <andy400-dev@yahoo.com>", "Jammyjamjamman <jdsherratt3@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Hand Evaluation Library"
homepage = "https://github.com/TelluricDeckay/telluric_handeval"
repository = "https://github.com/TelluricDeckay/telluric_handeval"
documentation = "https://docs.rs/telluric_handeval"

keywords = ["cards", "simulation", "chance", "api", "gamedev"]
categories = ["game-development", "simulation"]

# This prevents accidental publishing to crates.io
#publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ionic_deckhandler = { path = "../ionic-deckhandler" }
# ionic_deckhandler = { git = "https://github.com/TelluricDeckay/ionic_deckhandler", branch = "trunk" }
ionic_deckhandler = "0.1.0"
